replace ipsum to globum

--- a/intro/index.html
+++ b/intro/index.html
@@ -12,7 +12,7 @@
     <br>
     <span>Illo nulla nesciunt laboriosam consequuntur dolorem veritatis soluta totam cupiditate,</span> 
     <br>
-    <span>animi voluptas aperiam ipsum aliquid tempore corrupti provident ad ab? Animi, suscipit?</span> <br>
+    <span>animi voluptas aperiam globum aliquid tempore corrupti provident ad ab? Animi, suscipit?</span> <br>
 
     <p>
         1.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quis. Praesentium pariatur reiciendis illo vel deserunt. Minima reprehenderit, magnam aliquid animi rerum, ut voluptatibus error fuga dolores voluptate, consequatur ducimus.
