replace Lorem to Volum

--- a/intro/index.html
+++ b/intro/index.html
@@ -6,7 +6,7 @@
     <title>Index</title>
 </head>
 <body>
-    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <span>Volum ipsum dolor sit amet consectetur adipisicing elit.
 
     </span> <br>
     <br>
@@ -15,10 +15,10 @@
     <span>animi voluptas aperiam globum aliquid tempore corrupti provident ad ab? Animi, suscipit?</span> <br>
 
     <p>
-        1.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quis. Praesentium pariatur reiciendis illo vel deserunt. Minima reprehenderit, magnam aliquid animi rerum, ut voluptatibus error fuga dolores voluptate, consequatur ducimus.
+        1.Volum ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quis. Praesentium pariatur reiciendis illo vel deserunt. Minima reprehenderit, magnam aliquid animi rerum, ut voluptatibus error fuga dolores voluptate, consequatur ducimus.
     </p>
 
-    <p>2.Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nam deserunt, id, cupiditate amet quam corporis saepe natus sint praesentium consequatur eos dolorum nobis in aliquam dolorem. Esse, accusantium quisquam?
+    <p>2.Volum ipsum dolor sit amet consectetur adipisicing elit. Illo nam deserunt, id, cupiditate amet quam corporis saepe natus sint praesentium consequatur eos dolorum nobis in aliquam dolorem. Esse, accusantium quisquam?
 
         
     </p>
