--- a/intro/index.html
+++ b/intro/index.html
@@ -38,7 +38,12 @@
        </ol> 
         
     </p>
-    
+   <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos necessitatibus labore mollitia dolor vero, officiis consequatur saepe cupiditate recusandae quo facilis esse sint molestias ea illo veritatis ipsa perspiciatis minus.</div>
+   <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae eos fugiat quidem. Eos nostrum sed nihil distinctio reiciendis voluptatem enim repellendus esse dolorum aut quas, mollitia, ut eaque quod assumenda.</div>
+   <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugiat odio praesentium quaerat doloribus, assumenda ex deleniti enim dolor illum exercitationem! Voluptatem nisi ullam adipisci, architecto nemo recusandae nesciunt quia.</div>
+   <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint qui mollitia itaque! Deleniti autem eum officia corporis tempora, repudiandae aliquam assumenda nostrum ratione libero asperiores reprehenderit, quas alias? Voluptas, dolorem.</div>
+   <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus neque iusto cumque dolores quia, eum aliquid expedita vitae quibusdam impedit ipsa praesentium suscipit ullam deleniti incidunt tempore corporis nam corrupti!</div>
+
 
 </body>
 </html>
