add paragraph with symbols

--- a/intro/index.html
+++ b/intro/index.html
@@ -43,7 +43,10 @@
    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugiat odio praesentium quaerat doloribus, assumenda ex deleniti enim dolor illum exercitationem! Voluptatem nisi ullam adipisci, architecto nemo recusandae nesciunt quia.</div>
    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint qui mollitia itaque! Deleniti autem eum officia corporis tempora, repudiandae aliquam assumenda nostrum ratione libero asperiores reprehenderit, quas alias? Voluptas, dolorem.</div>
    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus neque iusto cumque dolores quia, eum aliquid expedita vitae quibusdam impedit ipsa praesentium suscipit ullam deleniti incidunt tempore corporis nam corrupti!</div>
-
-
+<p>I will display &euro;</p>
+<p>I will display &delta; </p>
+<p>I will display &empty; </p>
+<p>I I will display &part;</p>
+<p>I will display &nabla;</p>
 </body>
 </html>
