--- a/intro/index.html
+++ b/intro/index.html
@@ -6,6 +6,7 @@
     <title>Index</title>
 </head>
 <body>
+    <link rel="stylesheet" href="style.css">
     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.
 
     </span> <br>
