--- a/intro/index.html
+++ b/intro/index.html
@@ -16,7 +16,7 @@
     <span>animi voluptas aperiam globum aliquid tempore corrupti provident ad ab? Animi, suscipit?</span> <br>
 
     <p>
-        1.Golem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quis. Praesentium pariatur reiciendis illo vel deserunt. Minima reprehenderit, magnam aliquid animi rerum, ut voluptatibus error fuga dolores voluptate, consequatur olaf    </p>
+        1.Golem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quis. Praesentium pariatur reiciendis illo vel deserunt. Minima reprehenderit, magnam aliquid animi rerum, ut voluptatibus error fuga dolores voluptate, consequatur ol olson    </p>
 
     <p>2.Golem ipsum dolor sit amet consectetur adipisicing elit. Illo nam deserunt, id, cupiditate amet quam corporis saepe natus sint praesentium consequatur eos dolorum nobis in aliquam dolorem. Esse, accusantium quisquam?
         <ul>
