--- a/intro/index.html
+++ b/intro/index.html
@@ -11,23 +11,23 @@
 
     </span> <br>
     <br>
-    <span>Illo nulla nesciunt laboriosam consequuntur doGolem veritatis soluta totam cupiditate,</span> 
-    <br>
+    
+
+    <span>Illo nulla nesciunt laboriosam consequuntur doGolem veritatis soluta totam cupiditate,</span> <br>
     <span>animi voluptas aperiam globum aliquid tempore corrupti provident ad ab? Animi, suscipit?</span> <br>
 
     <p>
         1.Golem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quis. Praesentium pariatur reiciendis illo vel deserunt. Minima reprehenderit, magnam aliquid animi rerum, ut voluptatibus error fuga dolores voluptate, consequatur olaf    </p>
 
-    <p>2.Golem ipsum dolor sit amet consectetur adipisicing elit. Illo nam deserunt, id, cupiditate amet quam corporis saepe natus sint praesentium consequatur eos dolorum nobis in aliquam dolorem. Esse, accusantium quisquam?
+    <p>2.holem insum dolor sit amet consectetur adipisicing elit. Illo nam deserunt, id, cupiditate amet quam corporis saepe natus sint praesentium consequatur eos dolorum nobis in aliquam dolorem. Esse, accusantium quisquam?
         <ul>
             <li>Golem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus vitae sunt nulla dignissimos esse dolorum at numquam consequatur nemo veniam laudantium distinctio aliquam omnis sit reiciendis, ratione atque. Mollitia, pariatur.</li>
             <li>Golem ipsum dolor sit amet consectetur adipisicing elit. Illum officia veniam molestiae commodi qui nihil excepturi eligendi! Iste quisquam illo, minus deserunt laudantium qui! In ratione labore corporis nam reiciendis.</li>            
             <li>Golem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem, magni facilis voluptas deserunt dolore magnam. Ex laudantium doloremque, enim voluptas labore dolorum! Quod impedit reprehenderit iste a fugiat rem.</li>
             <li>Golem ipsum dolor sit, amet consectetur adipisicing elit. Dicta modi dolorum, repellendus doloribus esse officiis ab. Ad ullam fuga eius suscipit nesciunt praesentium possimus perferendis dignissimos quas modi. Quod, soluta!</li>
             <li>Golem ipsum dolor sit amet consectetur adipisicing elit. Assumenda natus, repellendus deleniti optio minima rerum incidunt quisquam blanditiis deserunt tenetur cum quasi expedita quia porro corrupti commodi soluta numquam atque!</li>
-            <li>Golem ipsum dolor sit amet consectetur adipisicing elit. A cum quisquam, aperiam et tempore rem totam deserunt quod exercitationem? Rem laudantium corporis dolorem fuga dolore eum tempore deserunt veniam autem.</li>
-            <li>Golem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempora error est accusamus, possimus laboriosam sunt doloremque? Eum autem suscipit quisquam, sit, sapiente deserunt est maxime nostrum earum nesciunt soluta!</li>
-            <li>Golem ipsum dolor sit amet consectetur adipisicing elit. Ut reiciendis quos distinctio in accusantium quo esse placeat hic reprehenderit sequi ullam neque expedita, est dignissimos obcaecati voluptatum voluptas fuga illum!</li>
+            <li>volum ipsum volor sit amet consectetur adipisicing elit. A cum quisquam, aperiam et tempore rem totam deserunt quod exercitationem? Rem laudantium corporis dolorem fuga dolore eum tempore deserunt veniam autem.</li>
+            <li>Golem ipsum dolor sit amet consectetur kadipisicing elit. Aperiam tempora error est accusamus, possimus laboriosam sunt doloremque? Eum autem suscipit quisquam, sit, sapiente deserunt est maxime nostrum earum nesciunt soluta!</li> <li>Golem ipsum dolor sit amet consectetur adipisicing elit. Ut reiciendis quos distinctio in accusantium quo esse placeat hic reprehenderit sequi ullam neque expedita, est dignissimos obcaecati voluptatum voluptas fuga illum!</li>
 
         </ul>
        <ol>
